--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/iFrames.html
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/iFrames.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/CSS/Estilos iframes.css">
 </head>
 <body>
-    <a href="Elementos Span div class id.html">Ir a Elementos span div class id</a>
+    <a href="index.html">Ir a Elementos span div class id</a>
     <h1 class="titulo">Uso de iframe en HTML</h1>
     <iframe src="texto.html" class="marco" name="marco1"></iframe>
     <div class="centrar">
