--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <body>
     <h1>Bienvenido a mis Cursos de Programación</h1>
     <ul>
-      <li><a href="cursosprogramacion/HTML + CSS/Leccion01 HTML/index.html">Lección 1</a></li>
-      <li><a href="cursosprogramacion/HTML + CSS/Leccion02 HTML + CSS/index.html">Lección 2</a></li>
-      <li><a href="cursosprogramacion/HTML + CSS/Leccion03 HTML + CSS Links/index.html">Lección 3</a></li>
-      <li><a href="cursosprogramacion/HTML + CSS/Leccion04 HTML + CSS Tablas/index.html">Lección 4</a></li>
-      <li><a href="cursosprogramacion/HTML + CSS/Leccion05 HTML + CSS Listas/index.html">Lección 5</a></li>
-      <li><a href="cursosprogramacion/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html">Lección 6</a></li>
-      <li><a href="cursosprogramacion/HTML + CSS/Leccion07 HTML + CSS Formularios/index.html">Lección 7 (aún no está)</a></li>
+      <li><a href="HTML + CSS/Leccion01 HTML/index.html">Lección 1</a></li>
+      <li><a href="HTML + CSS/Leccion02 HTML + CSS/index.html">Lección 2</a></li>
+      <li><a href="HTML + CSS/Leccion03 HTML + CSS Links/index.html">Lección 3</a></li>
+      <li><a href="HTML + CSS/Leccion04 HTML + CSS Tablas/index.html">Lección 4</a></li>
+      <li><a href="HTML + CSS/Leccion05 HTML + CSS Listas/index.html">Lección 5</a></li>
+      <li><a href="HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html">Lección 6</a></li>
+      <li><a href="HTML + CSS/Leccion07 HTML + CSS Formularios/index.html">Lección 7 (aún no está)</a></li>
     </ul>
   </body>
 </html>
