--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <li><a href="/HTML + CSS/Leccion02 HTML + CSS/index.html">Lección 2</a></li>
       <li><a href="/HTML + CSS/Leccion03 HTML + CSS Links/index.html">Lección 3</a></li>
       <li><a href="/HTML + CSS/Leccion04 HTML + CSS Tablas/index.html">Lección 4</a></li>
-      <li><a href="/HTML + CSS/Leccion05 HTML + CSS Listas/index.html">Lección 5</a></li>
-      <li><a href="CursosProgramacion/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html">Lección 6</a></li>
+      <li><a href="/HTML%+%CSS/Leccion05%HTML%+%CSS%Listas/index.html">Lección 5</a></li>
+      <li><a href="CursosProgramacion/HTML%+%CSS/Leccion06%HTML%+%CSS%Elementos%Inline%y%Block/index.html">Lección 6</a></li>
       <li><a href="/HTML + CSS/Leccion07 HTML + CSS Formularios/index.html">Lección 7 (aún no está)</a></li>
     </ul>
   </body>
