Update Inicio Tipos de Listas.html

--- a/HTML + CSS/Leccion05 HTML + CSS Listas/Inicio Tipos de Listas.html
+++ b/HTML + CSS/Leccion05 HTML + CSS Listas/Inicio Tipos de Listas.html
@@ -9,7 +9,7 @@
 <body>
 <!-- Unordered List <ul> Menú de Navegación hecho con Listas No Ordenadas -->
     <ul>
-        <li><a href="Inicio Tipos de Listas.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="Contacto.html">Contacto</a></li>
         <li><a href="Acerca De.html">Acerca De</a></li>
         <li><a href="Listas No Ordenadas.html">Listas No Ordenadas</a></li>
