--- a/HTML + CSS/Leccion05 HTML + CSS Listas/Listas No Ordenadas.html
+++ b/HTML + CSS/Leccion05 HTML + CSS Listas/Listas No Ordenadas.html
@@ -26,7 +26,7 @@
         <li>Ismael</li>
         <li>Aroa</li>
     </ul>
-    <a href="Inicio Tipos de Listas.html">Inicio</a>
+    <a href="index.html">Inicio</a>
 <!-- Defined List <dl> -->
 </body>
 </html>
