--- a/HTML + CSS/Leccion05 HTML + CSS Listas/Listas Ordenadas.html
+++ b/HTML + CSS/Leccion05 HTML + CSS Listas/Listas Ordenadas.html
@@ -14,7 +14,7 @@
         <li>Universidad Excel</li>
         <li>Universidad HTML</li>
     </ol>
-    <a href="Inicio Tipos de Listas.html">Inicio</a>
+    <a href="index.html">Inicio</a>
 </body>
 </html>
 <!-- Ordered List <ol> -->
