Update Listas de Descripcion.html

--- a/HTML + CSS/Leccion05 HTML + CSS Listas/Listas de Descripcion.html
+++ b/HTML + CSS/Leccion05 HTML + CSS Listas/Listas de Descripcion.html
@@ -18,6 +18,6 @@
         <dt>JavaScript:</dt>
         <dd>Creador: Brendan Eich</dd>
     </dl>
-    <a href="Inicio Tipos de Listas.html">Inicio</a>
+    <a href="index.html">Inicio</a>
 </body>
 </html>
