--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       <li><a href="HTML + CSS/Leccion01 HTML/index.html">Lección 1</a></li>
       <li><a href="HTML + CSS/Leccion02 HTML + CSS/index.html">Lección 2</a></li>
       <li><a href="HTML + CSS/Leccion03 HTML + CSS Links/index.html">Lección 3</a></li>
-      <li><a href="HTML + CSS/Leccion04 HTML + CSS Tablas/index.html">Lección 4</a></li>
-      <li><a href="HTML%+%CSS/Leccion05%HTML%+%CSS%Listas/index.html">Lección 5</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html">Lección 4</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html">Lección 5</a></li>
       <li><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html">Lección 6</a></li>
       <li><a href="HTML + CSS/Leccion07 HTML + CSS Formularios/index.html">Lección 7 (aún no está)</a></li>
     </ul>
