--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elementos inline y block</title>
-    <link rel="stylesheet" href="/CSS/Estilos Elementos.css">
+    <link rel="stylesheet" href="CSS/Estilos%20Elementos.css">
 </head>
 <body>
     <a href="iFrames.html">Ir a iFrames en HTML</a>
