--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elementos inline y block</title>
-    <link rel="stylesheet" href="CSS/Estilos%20Elementos.css">
+    <link rel="stylesheet" href="/CursosProgramacion/HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/CSS/Estilos%20Elementos.css">
 </head>
 <body>
     <a href="iFrames.html">Ir a iFrames en HTML</a>
