--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>Bienvenido a mis Cursos de Programación</h1>
     <ul>
       <li><a href="HTML + CSS/Leccion01 HTML/index.html">Lección 1</a></li>
-      <li><a href="HTML + CSS/Leccion02 HTML + CSS/index.html">Lección 2</a></li>
+      <li><a href="HTML + CSS/Leccion02 HTML + CSS/BoxandBorders.html">Lección 2</a></li>
       <li><a href="HTML + CSS/Leccion03 HTML + CSS Links/index.html">Lección 3</a></li>
       <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html">Lección 4</a></li>
       <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html">Lección 5</a></li>
