--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <body>
     <h1>Bienvenido a mis Cursos de Programación</h1>
     <ul>
-      <li><a href="HTML + CSS/Leccion01 HTML/index.html">Lección 1</a></li>
-      <li><a href="HTML + CSS/Leccion02 HTML + CSS/BoxandBorders.html">Lección 2</a></li>
-      <li><a href="HTML + CSS/Leccion03 HTML + CSS Links/index.html">Lección 3</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html">Lección 4</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html">Lección 5</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html">Lección 6</a></li>
-      <li><a href="HTML + CSS/Leccion07 HTML + CSS Formularios/index.html">Lección 7 (aún no está)</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html">Lección 1</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html">Lección 2 (Box, Borders & Colors)</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/index.html">Lección 3 Links</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html">Lección 4 Tablas</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html">Lección 5 Listas</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html">Lección 6 Elementos inline y block</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Formularios/index.html">Lección 7 Formularios(aún no está)</a></li>
     </ul>
   </body>
 </html>
