--- a/HTML + CSS/Leccion02 HTML + CSS/BoxandBorders.html
+++ b/HTML + CSS/Leccion02 HTML + CSS/BoxandBorders.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universidad HTML</title>
-    <link rel="stylesheet" href="css/BoxandBorders.css"/>
+    <link rel="stylesheet" href="CSS/BoxandBorders.css"/>
 </head>
 <body>
     <h1>Universidad HTML</h1>
