--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <ul>
       <li><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html">Lección 1</a></li>
       <li><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html">Lección 2 (Box, Borders & Colors)</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20HTML.html">Lección 3 Links</a></li>
-      <ul>
-        <li><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html">Links como Botones</a></li>
-      </ul>
+      <li><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html">Lección 3 Links como Botones</a></li>
       <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html">Lección 4 Tablas</a></li>
       <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html">Lección 5 Listas</a></li>
       <li><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html">Lección 6 Elementos inline y block</a></li>
