--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/iFrames.html
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/iFrames.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iFrames en HTML </title>
-    <link rel="stylesheet" href="/CursosProgramacion/HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/CSS/Estilos%20iframes.css">
+    <link rel="stylesheet" href="CSS/Estilos iframes.css">
 </head>
 <body>
     <a href="index.html">Ir a Elementos span div class id</a>
