--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/iFrames.html
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/iFrames.html
@@ -9,7 +9,7 @@
 <body>
     <a href="index.html">Ir a Elementos span div class id</a>
     <h1 class="titulo">Uso de iframe en HTML</h1>
-    <iframe src="texto.html" class="marco" name="marco1"></iframe>
+    <iframe src="Texto.html" class="marco" name="marco1"></iframe>
     <div class="centrar">
         <a href="https://www.udemy.com/" target="marco1" class="boton">Cargar Curso HTML</a>
     </div>
