--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/Texto.html
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/Texto.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Nueva página a agregar al iframe</h1>
-    <p>Este es el nuevo párrafo</p>
+    <p>Esto es un cuadrante aparte para mostrar otra web, imagen, vídeo, etc.</p>
+    <p>Puedes hacer clic en el siguiente botón para abrir Udemy en este mismo cuadrante.</p>
 </body>
 </html>
