--- a/HTML + CSS/Leccion02 HTML + CSS/IntroduccionCSS.html
+++ b/HTML + CSS/Leccion02 HTML + CSS/IntroduccionCSS.html
@@ -14,7 +14,7 @@
         }
     </style>
 -->
-    <link rel='stylesheet' href="css/EstilosCSS.css"/>
+    <link rel='stylesheet' href="CSS/EstilosCSS.css"/>
     <style>
         h1{
             color:lightcoral;
