--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/CursosProgramacion/HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/CSS/Estilos%20Elementos.css">
 </head>
 <body>
-    <a href="iFrames.html">Ir a iFrames en HTML</a>
+    <a class="iframesbuton" href="iFrames.html">Ir a iFrames en HTML</a>
     <h1 id="titulo_principal">SPAN, DIV, CLASS, ID</h1>
     <h2 class="titulo">Elemento span (inline)</h2>
     <p>Texto donde vamos a 
