--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <body>
     <h1>Bienvenido a mis Cursos de Programación</h1>
     <ul>
-      <li><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" target="_blank">Lección 1</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" target="_blank">Lección 2 (Box, Borders & Colors)</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" target="_blank">Lección 3 Links como Botones</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html" target="_blank">Lección 4 Tablas</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html" target="_blank">Lección 5 Listas</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html" target="_blank">Lección 6 Elementos inline y block</a></li>
-      <li><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Formularios/index.html" target="_blank">Lección 7 Formularios(aún no está)</a></li>
+      <li><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" target="_blank">Lección 1</a></li></br>
+      <li><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" target="_blank">Lección 2 (Box, Borders & Colors)</a></li></br>
+      <li><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" target="_blank">Lección 3 Links como Botones</a></li></br>
+      <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html" target="_blank">Lección 4 Tablas</a></li></br>
+      <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html" target="_blank">Lección 5 Listas</a></li></br>
+      <li><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html" target="_blank">Lección 6 Elementos inline y block</a></li></br>
+      <li><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Formularios/index.html" target="_blank">Lección 7 Formularios(aún no está)</a></li></br>
     </ul>
   </body>
 </html>
