Actualización con Login

--- a/HTML + CSS/Leccion02 HTML + CSS/BoxandBorders.html
+++ b/HTML + CSS/Leccion02 HTML + CSS/BoxandBorders.html
@@ -15,5 +15,6 @@
     <a href="IntroduccionCSS.html">Ir a IntroduccionCSS</a>
     <br><br>
     <a href="ColoresConHTMLyCSS.html">Ir a ColoresConHTMLyCSS</a>
+    <p>Este es un texto con el párrafo en formato style del archivo CSS</p>
 </body>
 </html>
