Actualización con Login

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos de Programación</title>
+    <link rel="stylesheet" href="CSS/Login Styles.css"/>
   </head>
   <body>
     <h1>Bienvenido a mis Cursos de Programación</h1>
-    <ul>
-      <li><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" target="_blank">Lección 1</a></li></br>
-      <li><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" target="_blank">Lección 2 (Box, Borders & Colors)</a></li></br>
-      <li><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" target="_blank">Lección 3 Links como Botones</a></li></br>
-      <li><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html" target="_blank">Lección 4 Tablas</a></li></br>
-      <li><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html" target="_blank">Lección 5 Listas</a></li></br>
-      <li><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html" target="_blank">Lección 6 Elementos inline y block</a></li></br>
-      <li><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Formularios/index.html" target="_blank">Lección 7 Formularios(aún no está)</a></li></br>
-    </ul>
+      <div><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" class="Leccionlink" target="_blank">Lección 1</a></div>
+      <div><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink" target="_blank">Lección 2 (Box, Borders & Colors)</a></div>
+      <div><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" target="_blank">Lección 3 Links como Botones</a></div>
+      <div><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html" class="Leccionlink" target="_blank">Lección 4 Tablas</a></div>
+      <div><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html" class="Leccionlink" target="_blank">Lección 5 Listas</a></div>
+      <div><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></div>
+      <div><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a></div>
+      <div><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></div>
   </body>
 </html>
