Corrección links y css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <div><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" class="Leccionlink" target="_blank">Lección 1</a></div>
       <div><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink" target="_blank">Lección 2 (Box, Borders & Colors)</a></div>
       <div><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" target="_blank">Lección 3 Links como Botones</a></div>
-      <div><a href="HTML%20+%20CSS/Leccion04%20HTML%20+%20CSS%20Tablas/index.html" class="Leccionlink" target="_blank">Lección 4 Tablas</a></div>
-      <div><a href="HTML%20+%20CSS/Leccion05%20HTML%20+%20CSS%20Listas/index.html" class="Leccionlink" target="_blank">Lección 5 Listas</a></div>
-      <div><a href="HTML%20+%20CSS/Leccion06%20HTML%20+%20CSS%20Elementos%20Inline%20y%20Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></div>
-      <div><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a></div>
-      <div><a href="HTML%20+%20CSS/Leccion07%20HTML%20+%20CSS%20Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></div>
+      <div><a href="HTML + CSS/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink" target="_blank">Lección 4 Tablas</a></div>
+      <div><a href="HTML + CSS/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink" target="_blank">Lección 5 Listas</a></div>
+      <div><a href="HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></div>
+      <div><a href="HTML + CSS/Leccion07 HTML Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a></div>
+      <div><a href="HTML + CSS/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></div>
   </body>
 </html>
