--- a/HTML + CSS/Leccion07.2 HTML + CSS Login/index.html
+++ b/HTML + CSS/Leccion07.2 HTML + CSS Login/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario LogIn</title>
-    <link rel="stylesheet" href="/CSS/LoginStyle.css">
+    <link rel="stylesheet" href="CSS/LoginStyle.css">
 </head>
 <body>
     <div class="contenedor">
