--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos de Programación</title>
-    <link rel="stylesheet" href="CSS/Login Styles.css"/>
+    <link rel="stylesheet" href="CSS/IndexStyles.css"/>
   </head>
   <body>
     <h1>Bienvenido a mis Cursos de Programación</h1>
