--- a/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html
+++ b/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etiquetas semánticas en HTML</title>
+    <link href="/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/CSS/Styles.css" rel="stylesheet">
 </head>
+<!--
+<section>
+<article>
+<aside>
+<hgroup>
+<header> y <footer>
+<nav>
+-->
 <body>
     <header>
-        
+        <h1>Etiquetas Semánticas en HTML5</h1>
     </header>
+    <nav>
+        <a href="/index.html">Inicio</a>
+        <a href="#">Servicios</a>
+        <a href="#">Contacto</a>
+        <a href="#">Acerca De</a>
+    </nav>
+    <section>
+        <h2>Sección 1</h2>
+        <p>Información de la Sección</p>
+        <aside>
+            <p>Nombre del Autor</p>
+        </aside>
+    </section>
+    <section>
+        <h2>Sección 2</h2>
+        <article>
+            <h3>Artículo 1</h3>
+        </article>
+        <article>
+            <h3>Artículo 2</h3>
+        </article>
+        <article>
+            <h3>Artículo 3</h3>
+        </article>
+    </section>
+    <footer>
+        <h2>
+            <a href="https://github.com/RusJokah/CursosProgramacion" target="_blank">RusJokah GitHub Respository</a>
+        </h2>
+    </footer>
 </body>
 </html>
