--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <title>Cursos de Programación</title>
     <link rel="stylesheet" href="CSS/IndexStyles.css"/>
   </head>
-  <body>
+  <nav>
     <h1>Bienvenido a mis Cursos de Programación</h1>
-      <div><a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" class="Leccionlink" target="_blank">Lección 1</a></div>
-      <div><a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink" target="_blank">Lección 2 (Box, Borders & Colors)</a></div>
-      <div><a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" target="_blank">Lección 3 Links como Botones</a></div>
-      <div><a href="HTML + CSS/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink" target="_blank">Lección 4 Tablas</a></div>
-      <div><a href="HTML + CSS/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink" target="_blank">Lección 5 Listas</a></div>
-      <div><a href="HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></div>
-      <div><a href="HTML + CSS/Leccion07 HTML Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a></div>
-      <div><a href="HTML + CSS/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></div>
-  </body>
+      <a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" class="Leccionlink" target="_blank">Lección 1</a>
+      <a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink" target="_blank">Lección 2 (Box, Borders & Colors)</a></br>
+      <a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" target="_blank">Lección 3 Links como Botones</a>
+      <a href="HTML + CSS/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink" target="_blank">Lección 4 Tablas</a></br>
+      <a href="HTML + CSS/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink" target="_blank">Lección 5 Listas</a>
+      <a href="HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></br>
+      <a href="HTML + CSS/Leccion07 HTML Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a>
+      <a href="HTML + CSS/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></br>
+      <a href="/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink" target="_blank">Lección 8 Elementos Semánticos</a>
+  </nav>
+  <footer>
+    <h2>
+        <a href="https://github.com/RusJokah/CursosProgramacion" target="_blank">RusJokah GitHub Respository</a>
+    </h2>
+  </footer>
 </html>
