--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></br>
       <a href="HTML + CSS/Leccion07 HTML Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a>
       <a href="HTML + CSS/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></br>
-      <a href="/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink" target="_blank">Lección 8 Elementos Semánticos</a>
+      <a href="HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink" target="_blank">Lección 8 Elementos Semánticos</a>
   </nav>
   <footer>
     <h2>
