Update index CSS Leccion 8

--- a/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html
+++ b/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etiquetas semánticas en HTML</title>
-    <link href="/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/CSS/Styles.css" rel="stylesheet">
+    <link href="CSS/Styles.css" rel="stylesheet">
 </head>
 <!--
 <section>
