--- a/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html
+++ b/HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html
@@ -19,7 +19,7 @@
         <h1>Etiquetas Semánticas en HTML5</h1>
     </header>
     <nav>
-        <a href="../../index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="#">Servicios</a>
         <a href="#">Contacto</a>
         <a href="#">Acerca De</a>
