--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   </head>
   <nav>
     <h1>Bienvenido a mis Cursos de Programación</h1>
-      <a href="HTML%20+%20CSS/Leccion01%20HTML/Ejercicio.html" class="Leccionlink" target="_blank">Lección 1</a>
-      <a href="HTML%20+%20CSS/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink" target="_blank">Lección 2 (Box, Borders & Colors)</a></br>
-      <a href="HTML%20+%20CSS/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" target="_blank">Lección 3 Links como Botones</a>
-      <a href="HTML + CSS/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink" target="_blank">Lección 4 Tablas</a></br>
-      <a href="HTML + CSS/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink" target="_blank">Lección 5 Listas</a>
-      <a href="HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></br>
-      <a href="HTML + CSS/Leccion07 HTML Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a>
-      <a href="HTML + CSS/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></br>
-      <a href="HTML + CSS/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink" target="_blank">Lección 8 Elementos Semánticos</a>
+      <a href="CursoHTML/Leccion01%20HTML/Ejercicio.html" class="Leccionlink" target="_blank">Lección 1</a>
+      <a href="CursoHTML/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink" target="_blank">Lección 2 (Box, Borders & Colors)</a></br>
+      <a href="CursoHTML/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" target="_blank">Lección 3 Links como Botones</a>
+      <a href="CursoHTML/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink" target="_blank">Lección 4 Tablas</a></br>
+      <a href="CursoHTML/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink" target="_blank">Lección 5 Listas</a>
+      <a href="CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" target="_blank">Lección 6 Elementos inline y block</a></br>
+      <a href="CursoHTML/Leccion07 HTML Formularios/index.html" class="Leccionlink" target="_blank">Lección 7 Formularios</a>
+      <a href="CursoHTML/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink" target="_blank">Lección 7.2 Log-In</a></br>
+      <a href="CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink" target="_blank">Lección 8 Elementos Semánticos</a>
   </nav>
   <footer>
     <h2>
