Update Movilidad Web

--- a/CursoHTML/Leccion01 HTML/Ejercicio.html
+++ b/CursoHTML/Leccion01 HTML/Ejercicio.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 1 HTML</title>
+    <link rel="stylesheet" href="CSS/Styles.css">
 </head>
 <body style="background-color: rgb(201, 230, 255);">
+    <header>
+        <div class="nav-buttons">
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion02 HTML + CSS/BoxandBorders.html" class="btn">Siguiente: Lección 2</a>
+        </div>
+    </header>
     <h1>Universidad HTML<hr/></h1>
     <a href="">Inicio</a> | <a href="Ejercicio_Contacto.html">Contacto</a> | <a href="Ejercicio_AcercaDe.html">Acerca De</a>
     <br/>
