--- a/CursoHTML/Leccion02 HTML + CSS/BoxandBorders.html
+++ b/CursoHTML/Leccion02 HTML + CSS/BoxandBorders.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="CSS/BoxandBorders.css"/>
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../Leccion01 HTML/Ejercicio.html" class="btn">Atrás: Lección 1</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion03 HTML + CSS Links/Links como Botones HTML CSS.html" class="btn">Siguiente: Lección 3</a>
+        </div>
+    </header>
     <h1>Universidad HTML</h1>
     <p>Bienvenidos a CSS</p>
     <p style="color:aqua; background-color: blueviolet; margin-left: 300px; margin-right: 300px;">Saludos!</p>
