--- a/CursoHTML/Leccion03 HTML + CSS Links/Links como Botones HTML CSS.html
+++ b/CursoHTML/Leccion03 HTML + CSS Links/Links como Botones HTML CSS.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="CSS/Estilos Botones.css">
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../Leccion02 HTML + CSS/BoxandBorders.html" class="btn">Atrás: Lección 2</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion04 HTML + CSS Tablas/index.html" class="btn">Siguiente: Lección 4</a>
+        </div>
+    </header>
     <h1>Links HTML</h1>
     <br><br>
     <a href="Web/Contenido.html">Ir a Contenido</a>
