--- a/CursoHTML/Leccion04 HTML + CSS Tablas/index.html
+++ b/CursoHTML/Leccion04 HTML + CSS Tablas/index.html
@@ -11,6 +11,13 @@
     <!-- Para usar otra fuente hay que buscarla en google y copiar el Embbed para linkear la fuente a tu pagina -->
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../Leccion03 HTML + CSS Links/Links como Botones HTML CSS.html" class="btn">Atrás: Lección 3</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion05 HTML + CSS Listas/index.html" class="btn">Siguiente: Lección 5</a>
+        </div>
+    </header>
     <table>
         <caption>Listado de Personas</caption>
         <tr>
