--- a/CursoHTML/Leccion05 HTML + CSS Listas/index.html
+++ b/CursoHTML/Leccion05 HTML + CSS Listas/index.html
@@ -7,6 +7,13 @@
     <link href="CSS/EstilosInicio.css" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../Leccion04 HTML + CSS Tablas/index.html" class="btn">Atrás: Lección 4</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="btn">Siguiente: Lección 6</a>
+        </div>
+    </header>
 <!-- Unordered List <ul> Menú de Navegación hecho con Listas No Ordenadas -->
     <ul>
         <li><a href="index.html">Inicio</a></li>
