--- a/CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/index.html
+++ b/CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="CSS/Estilos Elementos.css">
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../Leccion05 HTML + CSS Listas/index.html" class="btn">Atrás: Lección 5</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion07 HTML Formularios/index.html" class="btn">Siguiente: Lección 7.1</a>
+        </div>
+    </header>
     <a href="iFrames.html" class="boton">Ir a iFrames en HTML</a>
     <h1 id="titulo_principal">SPAN, DIV, CLASS, ID</h1>
     <h2 class="titulo">Elemento span (inline)</h2>
