--- a/CursoHTML/Leccion07 HTML Formularios/index.html
+++ b/CursoHTML/Leccion07 HTML Formularios/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formularios en HTML</title>
+    <link rel="stylesheet" href="CSS/Styles.css">
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="btn">Atrás: Lección 6</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion07.2 HTML + CSS Login/index.html" class="btn">Siguiente: Lección 7.2</a>
+        </div>
+    </header>
     <h1>Formularios en HTML</h1>
     <form action="mi_servidor" method="POST">
         <!-- method="POST" Método para que no se visualice los strings sensibles tipo password en la URL -->
