--- a/CursoHTML/Leccion07.2 HTML + CSS Login/index.html
+++ b/CursoHTML/Leccion07.2 HTML + CSS Login/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="CSS/LoginStyle.css">
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../Leccion07 HTML Formularios/index.html" class="btn">Atrás: Lección 7.1</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion08 HTML + CSS Elementos semanticos/index.html" class="btn">Siguiente: Lección 8</a>
+        </div>
+    </header>
     <div class="contenedor">
         <h2>Log In</h2>
         <form method="POST" id="forma" name="forma">
