--- a/CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html
+++ b/CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html
@@ -16,7 +16,10 @@
 -->
 <body>
     <header>
-        <h1>Etiquetas Semánticas en HTML5</h1>
+        <div class="nav-buttons">
+            <a href="../Leccion07.2 HTML + CSS Login/index.html" class="btn">Atrás: Lección 7.2</a>
+            <a href="../../index.html" class="btn center">Inicio</a>
+        </div>
     </header>
     <nav>
         <a href="../index.html">Inicio</a>
