Nuevo bloque CSS

--- a/CursoCSS/Leccion01_CSS/index.html
+++ b/CursoCSS/Leccion01_CSS/index.html
@@ -7,6 +7,17 @@
     <link href="CSS/Styles.css" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <div class="nav-buttons">
+            <a href="../../index.html" class="btn center">Inicio</a>
+            <a href="../Leccion02_CSS/index.html" class="btn">Siguiente: Lección 2</a>
+        </div>
+    </header>
     <h1 id="titulo">Universidad CSS</h1>
+    <p class="centrar texto_grande">Iniciando el Curso CSS</p>
+    <p class="centrar">https://rusjokah.github.io/CursosProgramacion/</p></br>
+    <h2>CSS - Cascading Style Sheets</h2>
+    <div>Nuevo texto</div>
+    <p class="centrar">p.centrar{}</p>
 </body>
 </html>
