--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
     <link rel="stylesheet" href="CSS/IndexStyles.css"/>
   </head>
   <h1>Bienvenido a mis Cursos de Programación</h1>
-  <nav id="ListaCursosHTML">
+  <nav id="ListaCursoHTML">
     <fieldset>
       <legend>Cursos Programación HTML</legend>
       <a href="CursoHTML/Leccion01%20HTML/Ejercicio.html" class="Leccionlink">Lección 1</a>
       <a href="CursoHTML/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink">Lección 2 (Box, Borders & Colors)</a></br>
       <a href="CursoHTML/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" >Lección 3 Links como Botones</a>
-      <a href="CursoHTML/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink" >Lección 4 Tablas</a></br>
-      <a href="CursoHTML/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink" >Lección 5 Listas</a>
+      <a href="CursoHTML/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink">Lección 4 Tablas</a></br>
+      <a href="CursoHTML/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink">Lección 5 Listas</a>
       <a href="CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" >Lección 6 Elementos inline y block</a></br>
       <a href="CursoHTML/Leccion07 HTML Formularios/index.html" class="Leccionlink">Lección 7 Formularios</a>
       <a href="CursoHTML/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink">Lección 7.2 Log-In</a></br>
       <a href="CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink">Lección 8 Elementos Semánticos</a>
     </fieldset>
-    </nav>
+  </nav>
+  <nav id="ListaCursoCSS">
+    <fieldset>
+      <legend>Cursos Programación CSS</legend>
+      <a href="CursoCSS/Leccion01_CSS/index.html" class="Leccionlink">Lección 1 Class y ID</a>
+      <a href="CursoCSS/Leccion02_CSS/index.html" class="Leccionlink">Lección 2 Color names</a>
+    </fieldset>
+  </nav>
   <footer>
     <h2>
-        <a href="https://github.com/RusJokah/CursosProgramacion" target="_blank">RusJokah GitHub Respository</a>
+        <a href="https://github.com/RusJokah/CursosProgramacion" target="_blank" class="btn">RusJokah GitHub Respository</a>
     </h2>
   </footer>
 </html>
