--- a/CursoCSS/Leccion01_CSS/index.html
+++ b/CursoCSS/Leccion01_CSS/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="nav-buttons">
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion02_CSS/index.html" class="btn">Siguiente: Lección 2</a>
+            <a href="../Leccion02_CSS_coloresybordes/index.html" class="btn">Siguiente: Lección 2</a>
         </div>
     </header>
     <h1 id="titulo">Universidad CSS</h1>
