--- a/CursoCSS/Leccion02_CSS_coloresybordes/index.html
+++ b/CursoCSS/Leccion02_CSS_coloresybordes/index.html
@@ -11,7 +11,7 @@
         <div class="nav-buttons">
             <a href="../Leccion01_CSS/index.html" class="btn">Atrás: Lección 1</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion03" class="btn">Siguiente: Lección 3</a>
+            <a href="../Leccion03_BordesCSS/index.html" class="btn">Siguiente: Lección 3</a>
         </div>
     </header>
     <h1>Colores en CSS</h1>
