--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <fieldset>
       <legend>Cursos Programación CSS</legend>
       <a href="CursoCSS/Leccion01_CSS/index.html" class="Leccionlink">Lección 1 Class y ID</a>
-      <a href="CursoCSS/Leccion02_CSS/index.html" class="Leccionlink">Lección 2 Color names</a>
+      <a href="CursoCSS/Leccion02_CSS_coloresybordes/index.html" class="Leccionlink">Lección 2 Color names y Bordes</a>
+      <a href="CursoCSS/Leccion03_BordesCSS/index.html" class="Leccionlink">Lección 3 Borders en CSS</a>
+      <a href="CursoCSS/Leccion04_BoxModel/index.html" class="Leccionlink">Lección 4 Box Model</a>
     </fieldset>
   </nav>
   <footer>
