--- a/CursoCSS/Leccion04_BoxModel/index.html
+++ b/CursoCSS/Leccion04_BoxModel/index.html
@@ -11,7 +11,7 @@
         <div class="nav-buttons">
             <a href="../Leccion03_BordesCSS/index.html" class="btn">Atrás: Lección 3</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion05" class="btn">Siguiente: Lección 5</a>
+            <a href="../Leccion05_ColoresCSS/index.html" class="btn">Siguiente: Lección 5</a>
         </div>
     </header>
     <h1>Box Model en CSS</h1>
