--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <a href="CursoCSS/Leccion02_CSS_coloresybordes/index.html" class="Leccionlink">Lección 2 Color names y Bordes</a>
       <a href="CursoCSS/Leccion03_BordesCSS/index.html" class="Leccionlink">Lección 3 Borders en CSS</a>
       <a href="CursoCSS/Leccion04_BoxModel/index.html" class="Leccionlink">Lección 4 Box Model</a>
+      <a href="CursoCSS/Leccion05_ColoresCSS/" class="Leccionlink">Lección 5 Colores en CSS</a>
+      <a href="CursoCSS/Leccion06_Fondos/index.html" class="Leccionlink">Lección 6 Backgrounds</a>
+      <a href="CursoCSS/Leccion07_FormatoTexto/index.html" class="Leccionlink">Lección 7 Formato de Texto</a>
     </fieldset>
   </nav>
   <footer>
