Leccion 7 Formato Texto + Mejoras globales

--- a/CursoCSS/Leccion07_FormatoTexto/index.html
+++ b/CursoCSS/Leccion07_FormatoTexto/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formato de Texto con CSS</title>
     <link href="CSS/Styles.css" rel="stylesheet">
 </head>
 <body>
@@ -11,9 +11,16 @@
         <div class="nav-buttons">
             <a href="../Leccion06_Fondos/index.html" class="btn">Atrás: Lección 6</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion08" class="btn">Siguiente: Lección 8</a>
+            <a href="../Leccion08_FuentesCSS/index.html" class="btn">Siguiente: Lección 8</a>
         </div>
     </header>
-    <h1>Formato de Texto</h1>
+    <h1>Formato de Texto con CSS</h1>
+    <div class="caja">
+        <p class="texto">
+            Curso de Universidad CSS donde aprenderás a crear aplicaciones web con diseños increíbles en el menor tiempo posible.
+        </p>
+        <p class="texto">
+            Durante mi proceso de aprendizaje en HTML y CSS, he adquirido una comprensión profunda de la estructura y diseño web. He aprendido a crear páginas web dinámicas y responsivas, utilizando las etiquetas adecuadas para garantizar una correcta semántica y accesibilidad. Además, he dominado el uso de CSS para personalizar estilos, trabajando con colores, fuentes, márgenes, y layouts complejos como Flexbox y Grid. Mi enfoque también ha incluido la optimización para dispositivos móviles, asegurando que los sitios sean completamente funcionales y visualmente atractivos en diferentes tamaños de pantalla, lo que me ha permitido llevar mis proyectos a un nivel profesional.        </p>
+    </div>
 </body>
 </html>
