--- a/CursoCSS/Leccion08_FuentesCSS/index.html
+++ b/CursoCSS/Leccion08_FuentesCSS/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manejo de Fondos en CSS</title>
+    <title>Fuentes en CSS</title>
     <link href="CSS/Styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="nav-buttons">
-            <a href="../Leccion05_ColoresCSS/index.html" class="btn">Atrás: Lección 5</a>
+            <a href="../Leccion07_FormatoTexto/index.html" class="btn">Atrás: Lección 7</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion07_FormatoTexto/index.html" class="btn">Siguiente: Lección 6</a>
+            <a href="../Leccion09" class="btn">Siguiente: Lección 9</a>
         </div>
     </header>
-    <h1>Manejo de Fondos en CSS</h1>
-    <p>Texto de la página</p>
+    <h1>Fuentes en CSS</h1>
 </body>
 </html>
