--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <a href="CursoCSS/Leccion05_ColoresCSS/" class="Leccionlink">Lección 5 Colores en CSS</a>
       <a href="CursoCSS/Leccion06_Fondos/index.html" class="Leccionlink">Lección 6 Backgrounds</a>
       <a href="CursoCSS/Leccion07_FormatoTexto/index.html" class="Leccionlink">Lección 7 Formato de Texto</a>
+      <a href="CursoCSS/Leccion08_FuentesCSS/index.html" class="Leccionlink">Lección 8 Fuentes CSS</a>
     </fieldset>
   </nav>
   <footer>
