Corrección página principal fieldsets

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="CSS/IndexStyles.css"/>
   </head>
   <h1>Bienvenido a mis Cursos de Programación</h1>
-  <nav id="ListaCursoHTML">
-    <fieldset>
+  <div class="centrarfieldset">
+    <fieldset class="ListaCursoHTML">
       <legend>Cursos Programación HTML</legend>
       <a href="CursoHTML/Leccion01%20HTML/Ejercicio.html" class="Leccionlink">Lección 1</a>
       <a href="CursoHTML/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink">Lección 2 (Box, Borders & Colors)</a></br>
@@ -18,9 +18,7 @@
       <a href="CursoHTML/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink">Lección 7.2 Log-In</a></br>
       <a href="CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink">Lección 8 Elementos Semánticos</a>
     </fieldset>
-  </nav>
-  <nav id="ListaCursoCSS">
-    <fieldset>
+    <fieldset class="ListaCursoCSS">
       <legend>Cursos Programación CSS</legend>
       <a href="CursoCSS/Leccion01_CSS/index.html" class="Leccionlink">Lección 1 Class y ID</a>
       <a href="CursoCSS/Leccion02_CSS_coloresybordes/index.html" class="Leccionlink">Lección 2 Color names y Bordes</a>
@@ -31,7 +29,7 @@
       <a href="CursoCSS/Leccion07_FormatoTexto/index.html" class="Leccionlink">Lección 7 Formato de Texto</a>
       <a href="CursoCSS/Leccion08_FuentesCSS/index.html" class="Leccionlink">Lección 8 Fuentes CSS</a>
     </fieldset>
-  </nav>
+  </div>
   <footer>
     <h2>
         <a href="https://github.com/RusJokah/CursosProgramacion" target="_blank" class="btn">RusJokah GitHub Respository</a>
