--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <h1>Bienvenido a mis Cursos de Programación</h1>
   <div class="centrarfieldset">
-    <fieldset class="ListaCursoHTML">
+    <fieldset>
       <legend>Cursos Programación HTML</legend>
       <a href="CursoHTML/Leccion01%20HTML/Ejercicio.html" class="Leccionlink">Lección 1</a>
       <a href="CursoHTML/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink">Lección 2 (Box, Borders & Colors)</a></br>
@@ -18,7 +18,7 @@
       <a href="CursoHTML/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink">Lección 7.2 Log-In</a></br>
       <a href="CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink">Lección 8 Elementos Semánticos</a>
     </fieldset>
-    <fieldset class="ListaCursoCSS">
+    <fieldset>
       <legend>Cursos Programación CSS</legend>
       <a href="CursoCSS/Leccion01_CSS/index.html" class="Leccionlink">Lección 1 Class y ID</a>
       <a href="CursoCSS/Leccion02_CSS_coloresybordes/index.html" class="Leccionlink">Lección 2 Color names y Bordes</a>
