Prueba redirección minúsculas

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos de Programación</title>
     <link rel="stylesheet" href="CSS/IndexStyles.css"/>
+    <script>
+      if (window.location.pathname !== window.location.pathname.toLowerCase()) {
+          window.location.pathname = window.location.pathname.toLowerCase();
+      }
+   </script>
   </head>
   <h1>Bienvenido a mis Cursos de Programación</h1>
   <div class="centrarfieldset">
