Curso 9 Icons + Curso 10 Display

--- a/CursoCSS/Leccion08_FuentesCSS/index.html
+++ b/CursoCSS/Leccion08_FuentesCSS/index.html
@@ -11,7 +11,7 @@
         <div class="nav-buttons">
             <a href="../Leccion07_FormatoTexto/index.html" class="btn">Atrás: Lección 7</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion09" class="btn">Siguiente: Lección 9</a>
+            <a href="../Leccion09_Iconos/index.html" class="btn">Siguiente: Lección 9</a>
         </div>
     </header>
     <h1>Fuentes en CSS</h1>
