--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <a href="CursoCSS/Leccion06_Fondos/index.html" class="Leccionlink">Lección 6 Backgrounds</a>
       <a href="CursoCSS/Leccion07_FormatoTexto/index.html" class="Leccionlink">Lección 7 Formato de Texto</a>
       <a href="CursoCSS/Leccion08_FuentesCSS/index.html" class="Leccionlink">Lección 8 Fuentes CSS</a>
+      <a href="CursoCSS/Leccion09_Iconos/index.html" class="Leccionlink">Lección 9 Iconos</a>
+      <a href="CursoCSS/Leccion10_Display/index.html" class="Leccionlink">Lección 10 Display</a>
     </fieldset>
   </div>
   <footer>
