--- a/CursoCSS/Leccion10_Display/index.html
+++ b/CursoCSS/Leccion10_Display/index.html
@@ -11,7 +11,7 @@
         <div class="nav-buttons">
             <a href="../Leccion09_Iconos/index.html" class="btn">Atrás: Lección 9</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion11" class="btn">Siguiente: Lección 11</a>
+            <a href="../Leccion11_Posicionamiento_ElementosCSS/index.html" class="btn">Siguiente: Lección 11</a>
         </div>
     </header>
     <h1>Propiedad Display en CSS</h1>
