--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <a href="CursoCSS/Leccion08_FuentesCSS/index.html" class="Leccionlink">Lección 8 Fuentes CSS</a>
       <a href="CursoCSS/Leccion09_Iconos/index.html" class="Leccionlink">Lección 9 Iconos</a>
       <a href="CursoCSS/Leccion10_Display/index.html" class="Leccionlink">Lección 10 Display</a>
+      <a href="CursoCSS/Leccion11_Posicionamiento_ElementosCSS/index.html" class="Leccionlink">Lección 11 Posicionamiento Elementos en CSS</a>
     </fieldset>
   </div>
   <footer>
