Curso 12 Propiedad Overflow y Float

--- a/CursoCSS/Leccion11_Posicionamiento_ElementosCSS/index.html
+++ b/CursoCSS/Leccion11_Posicionamiento_ElementosCSS/index.html
@@ -11,7 +11,7 @@
         <div class="nav-buttons">
             <a href="../Leccion10_Display/index.html" class="btn">Atrás: Lección 10</a>
             <a href="../../index.html" class="btn center">Inicio</a>
-            <a href="../Leccion12" class="btn">Siguiente: Lección 12</a>
+            <a href="../Leccion12_Overflow_y_Float/index.html" class="btn">Siguiente: Lección 12</a>
         </div>
     </header>
     <h1>Centrar Elementos Div</h1>
@@ -43,6 +43,11 @@
             Tercer elemento absoluto.
         </div>
     </div>
-    <div style="padding-bottom: 1000px;">Párrafo para dar el margen</div>
+    <h1>Imagen con Texto Centrado</h1>
+    <div class="contenedor">
+        <img src="html5.png" alt="Logo HTML5" class="imagen">
+        <div class="centro">Logo HTML5</div>
+    </div>
+    <p style="padding-bottom: 1000px;">Párrafo para dar el margen</p>
 </body>
 </html>
