--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <a href="CursoCSS/Leccion09_Iconos/index.html" class="Leccionlink">Lección 9 Iconos</a>
       <a href="CursoCSS/Leccion10_Display/index.html" class="Leccionlink">Lección 10 Display</a>
       <a href="CursoCSS/Leccion11_Posicionamiento_ElementosCSS/index.html" class="Leccionlink">Lección 11 Posicionamiento Elementos en CSS</a>
+      <a href="CursoCSS/Leccion12_Overflow_y_Float/index.html" class="Leccionlink">Lección 12 Overflow y Float</a>
     </fieldset>
   </div>
   <footer>
