Leccion13 Display Inline + Block

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <a href="CursoCSS/Leccion09_Iconos/index.html" class="Leccionlink">Lección 9 Iconos</a>
       <a href="CursoCSS/Leccion10_Display/index.html" class="Leccionlink">Lección 10 Display</a>
       <a href="CursoCSS/Leccion11_Posicionamiento_ElementosCSS/index.html" class="Leccionlink">Lección 11 Posicionamiento Elementos en CSS</a>
-      <a href="CursoCSS/Leccion12_Overflow_y_Float/index.html" class="Leccionlink">Lección 12 Overflow y Float</a>
+      <a href="CursoCSS/Leccion12_Overflow_y_Float/index.html" class="Leccionlink">Lección 12 Overflow + Float</a>
+      <a href="CursoCSS/Leccion13_Display_Inline+Block/index.html" class="Leccionlink">Lección 13 Display: Inline + Block</a>
+      <a href="CursoCSS/Leccion14_Selectores_Combinados/index.html" class="Leccionlink">Lección 14 Selectores Combinados</a>
     </fieldset>
   </div>
   <footer>
