--- a/CursoCSS/Leccion14_Selectores_Combinados/index.html
+++ b/CursoCSS/Leccion14_Selectores_Combinados/index.html
@@ -14,5 +14,14 @@
             <a href="../Leccion15" class="btn">Siguiente: Lección 15</a>
         </div>
     </header>
+    <h1>Selectores Combinados en CSS</h1>
+    <div class="contenedor descendiente">
+        Selectores Descendientes (en cualquier nivel interno):
+        <p>Primer renglón</p>
+        <p>Segundo renglón</p>
+        <section>
+            <p>Tercer renglón</p>
+        </section>
+    </div>
 </body>
 </html>
