--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
 </head>
   <h1>Bienvenido a mis Cursos de Programación</h1>
   <div class="centrarfieldset">
-    <fieldset>
+    <fieldset class="Leccionlink">
       <legend>Cursos Programación HTML</legend>
-      <a href="CursoHTML/Leccion01%20HTML/Ejercicio.html" class="Leccionlink">Lección 1</a>
-      <a href="CursoHTML/Leccion02%20HTML%20+%20CSS/BoxandBorders.html" class="Leccionlink">Lección 2 (Box, Borders & Colors)</a></br>
-      <a href="CursoHTML/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html" class="Leccionlink" >Lección 3 Links como Botones</a>
-      <a href="CursoHTML/Leccion04 HTML + CSS Tablas/index.html" class="Leccionlink">Lección 4 Tablas</a></br>
-      <a href="CursoHTML/Leccion05 HTML + CSS Listas/index.html" class="Leccionlink">Lección 5 Listas</a>
-      <a href="CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/index.html" class="Leccionlink" >Lección 6 Elementos inline y block</a></br>
-      <a href="CursoHTML/Leccion07 HTML Formularios/index.html" class="Leccionlink">Lección 7 Formularios</a>
-      <a href="CursoHTML/Leccion07.2 HTML + CSS Login/index.html" class="Leccionlink">Lección 7.2 Log-In</a></br>
-      <a href="CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html" class="Leccionlink">Lección 8 Elementos Semánticos</a>
+      <a href="CursoHTML/Leccion01%20HTML/Ejercicio.html">Lección 1</a>
+      <a href="CursoHTML/Leccion02%20HTML%20+%20CSS/BoxandBorders.html">Lección 2 (Box, Borders & Colors)</a></br>
+      <a href="CursoHTML/Leccion03%20HTML%20+%20CSS%20Links/Links%20como%20Botones%20HTML%20CSS.html">Lección 3 Links como Botones</a>
+      <a href="CursoHTML/Leccion04 HTML + CSS Tablas/index.html">Lección 4 Tablas</a></br>
+      <a href="CursoHTML/Leccion05 HTML + CSS Listas/index.html">Lección 5 Listas</a>
+      <a href="CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/index.html">Lección 6 Elementos inline y block</a></br>
+      <a href="CursoHTML/Leccion07 HTML Formularios/index.html">Lección 7 Formularios</a>
+      <a href="CursoHTML/Leccion07.2 HTML + CSS Login/index.html">Lección 7.2 Log-In</a></br>
+      <a href="CursoHTML/Leccion08 HTML + CSS Elementos semanticos/index.html">Lección 8 Elementos Semánticos</a>
     </fieldset>
-    <fieldset>
+    <fieldset class="Leccionlink">
       <legend>Cursos Programación CSS</legend>
-      <a href="CursoCSS/Leccion01_CSS/index.html" class="Leccionlink">Lección 1 Class y ID</a>
-      <a href="CursoCSS/Leccion02_CSS_coloresybordes/index.html" class="Leccionlink">Lección 2 Color names y Bordes</a>
-      <a href="CursoCSS/Leccion03_BordesCSS/index.html" class="Leccionlink">Lección 3 Borders en CSS</a>
-      <a href="CursoCSS/Leccion04_BoxModel/index.html" class="Leccionlink">Lección 4 Box Model</a>
-      <a href="CursoCSS/Leccion05_ColoresCSS/" class="Leccionlink">Lección 5 Colores en CSS</a>
-      <a href="CursoCSS/Leccion06_Fondos/index.html" class="Leccionlink">Lección 6 Backgrounds</a>
-      <a href="CursoCSS/Leccion07_FormatoTexto/index.html" class="Leccionlink">Lección 7 Formato de Texto</a>
-      <a href="CursoCSS/Leccion08_FuentesCSS/index.html" class="Leccionlink">Lección 8 Fuentes CSS</a>
-      <a href="CursoCSS/Leccion09_Iconos/index.html" class="Leccionlink">Lección 9 Iconos</a>
-      <a href="CursoCSS/Leccion10_Display/index.html" class="Leccionlink">Lección 10 Display</a>
-      <a href="CursoCSS/Leccion11_Posicionamiento_ElementosCSS/index.html" class="Leccionlink">Lección 11 Posicionamiento Elementos en CSS</a>
-      <a href="CursoCSS/Leccion12_Overflow_y_Float/index.html" class="Leccionlink">Lección 12 Overflow + Float</a>
-      <a href="CursoCSS/Leccion13_Display_Inline+Block/index.html" class="Leccionlink">Lección 13 Display: Inline + Block</a>
-      <a href="CursoCSS/Leccion14_Selectores_Combinados/index.html" class="Leccionlink">Lección 14 Selectores Combinados</a>
+      <a href="CursoCSS/Leccion01_CSS/index.html">Lección 1 Class y ID</a>
+      <a href="CursoCSS/Leccion02_CSS_coloresybordes/index.html">Lección 2 Color names y Bordes</a>
+      <a href="CursoCSS/Leccion03_BordesCSS/index.html">Lección 3 Borders en CSS</a>
+      <a href="CursoCSS/Leccion04_BoxModel/index.html">Lección 4 Box Model</a>
+      <a href="CursoCSS/Leccion05_ColoresCSS/">Lección 5 Colores en CSS</a>
+      <a href="CursoCSS/Leccion06_Fondos/index.html">Lección 6 Backgrounds</a>
+      <a href="CursoCSS/Leccion07_FormatoTexto/index.html">Lección 7 Formato de Texto</a>
+      <a href="CursoCSS/Leccion08_FuentesCSS/index.html">Lección 8 Fuentes CSS</a>
+      <a href="CursoCSS/Leccion09_Iconos/index.html">Lección 9 Iconos</a>
+      <a href="CursoCSS/Leccion10_Display/index.html">Lección 10 Display</a>
+      <a href="CursoCSS/Leccion11_Posicionamiento_ElementosCSS/index.html">Lección 11 Posicionamiento Elementos en CSS</a>
+      <a href="CursoCSS/Leccion12_Overflow_y_Float/index.html">Lección 12 Overflow + Float</a>
+      <a href="CursoCSS/Leccion13_Display_Inline+Block/index.html">Lección 13 Display: Inline + Block</a>
+      <a href="CursoCSS/Leccion14_Selectores_Combinados/index.html">Lección 14 Selectores Combinados</a>
     </fieldset>
   </div>
   <footer>
